--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -19,7 +19,7 @@
 		background-image: -webkit-radial-gradient(rgba(0,0,0,0.25) 25%, rgba(0,0,0,0) 55%);
 		background-image: -ms-radial-gradient(rgba(0,0,0,0.25) 25%, rgba(0,0,0,0) 55%);
 		background-image: radial-gradient(rgba(0,0,0,0.25) 25%, rgba(0,0,0,0) 55%);
-		max-width: 100%;
+		max-width: 120%;
 		text-align: center;
 
 		> * {
@@ -78,7 +78,7 @@
 				padding: 3rem 2rem;
 				max-height: 40rem;
 				overflow: hidden;
-
+        width: inherit;
 				> :last-child {
 					margin-bottom: 0;
 				}
@@ -114,7 +114,7 @@
             min-width: 7rem;
             max-width: 10rem;
 						height: 2.75rem;
-						line-height: 1rem;
+						line-height: 2.71rem;
 						padding: 0 1.25rem 0 (1.25rem + _font(letter-spacing));
 						text-transform: uppercase;
 						letter-spacing: _font(letter-spacing);
@@ -122,7 +122,7 @@
 						border-bottom: 0;
 
 						&:hover {
-							background-color: _palette(border-bg);
+							background-color: _palette(fg-hover);
 						}
 
 						&:active {
