--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -33,10 +33,11 @@
 	$palette: (
 		bg:							#1b1f22,
 		bg-alt:						#000000,
-		bg-overlay:					rgba(19,21,25,0.5),
+    bg-overlay:					rgba(19, 21, 25, 0.21),
 		fg:							#ffffff,
 		fg-bold:					#ffffff,
 		fg-light:					rgba(255,255,255,0.5),
+    fg-hover:					rgba(19, 21, 25, 0.52),
 		border:						#ffffff,
 		border-bg:					rgba(255,255,255,0.075),
 		border-bg-alt:				rgba(255,255,255,0.175)
