--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -84,7 +84,33 @@
 						background-color: _palette(border-bg-alt);
 					}
 				}
-			}
+      }
+      
+      nav {
+        ul {
+          @include vendor('display', 'flex');
+          list-style: none;
+          padding: 0px;
+  
+  
+          li {
+            border-left: solid _size(border-width) _palette(border-bg-alt);
+            text-align: center;
+            padding: 0em;
+            width: 4rem;
+  
+            &:first-child {
+              border-left: 0;
+            }
+  
+            &:hover {
+              // color: #198fb8;
+              color: _palette(border-bg-alt);
+              cursor: pointer;
+            }
+          }
+        }
+      }
 
 		}
 
