--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -13,11 +13,19 @@
 
 		.field {
 			margin: 0 0 ($gutter * 1) 0;
+      min-height: 5rem;
 
 			&.half {
 				width: 50%;
 				float: left;
         padding: 0 0 0 ($gutter * 1 * 0.5);
+
+        > span {
+          position: relative;
+          display: inline-block;
+          left: 50%;
+          transform: translate(-50%, 0%)
+        }
       }
         
       &.quarter {
@@ -193,7 +201,6 @@
 	input[type="radio"], {
 		@include vendor('appearance', 'none');
 		display: inline-block;
-		float: left;
 		margin-right: -2rem;
 		opacity: 0;
 		width: 1rem;
@@ -209,7 +216,8 @@
 			font-weight: _font(weight);
 			margin: 0 0 (_size(element-margin) * 0.25) 0;
 			padding-left: (_size(element-height) * 0.6) + 1rem;
-			padding-right: 0.75rem;
+      padding-right: 0.75rem;
+      padding-top: .6rem;
 			position: relative;
 
 			&:before {
@@ -228,7 +236,7 @@
 				line-height: calc(#{_size(element-height) * 0.575} + 0em);
 				position: absolute;
 				text-align: center;
-				top: -0.125rem;
+				top: .5rem;
 				width: (_size(element-height) * 0.6);
 			}
 		}
