guide, some main images

--- a/src/assets/scss/components/_image.scss
+++ b/src/assets/scss/components/_image.scss
@@ -21,7 +21,7 @@
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.5;
+			opacity: .5;
 			position: absolute;
 			top: 0;
 			width: 100%;
@@ -66,11 +66,22 @@
 		&.main {
 			display: block;
 			margin: (_size(element-margin) * 1.25) 0;
-			width: 100%;
-
+      width: 100%;
+      opacity: .9;
+      position: flex;
+      align-content: center;
 			img {
 				width: 100%;
-			}
+      }
+
+      > #title {
+        position: absolute;
+        // left: 50%;
+        text-align: center;
+        top: 50%;
+        width: 100%;
+        transform: translate(0%, -50%);
+      }
 		}
 
 		@include breakpoint(small) {
