--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -24,7 +24,7 @@
 				'opacity #{_duration(article)} ease-in-out',
 				'transform #{_duration(article)} ease-in-out'
 			));
-			@include padding(2.5rem, 2.5rem, (2rem, 0, 1rem, 0));
+			@include padding(2rem, 2rem, (2rem, 0, 1rem, 0));
 			position: relative;
 			width: 60rem;
 			max-width: 100%;
@@ -43,6 +43,27 @@
 
 			&.active {
 				display: block !important;
+      }
+      
+      #get-party-form {
+        margin: 0 0 1rem 0;
+      }
+
+      .submit-button-group {
+        text-align: right;
+        margin-top: 2rem;
+        button {
+          margin: 0rem 0rem 0rem 1rem;
+
+          &:first-child {
+            margin: 0rem 0rem;
+          }
+
+        }
+      }
+
+      .center {
+        text-align: center;
       }
 
 			.close {
