--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -66,6 +66,10 @@
         text-align: center;
       }
 
+      .error {
+        color: red;
+      }
+
 			.close {
 				display: block;
 				position: absolute;
