--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -28,7 +28,8 @@
 			position: relative;
 			width: 60rem;
 			max-width: 100%;
-			background-color: transparentize(_palette(bg), 0.15);
+      background-color: transparentize(_palette(bg), 0.15);
+      // background-color: bg
 			border-radius: _size(border-radius);
 			opacity: 0;
 
@@ -60,6 +61,34 @@
           }
 
         }
+      }
+
+      .sub-img {
+        width: calc(50% - 15px);;
+        margin-top: 5px;
+        border-radius: 4px;
+        padding-top: 0px !important;
+      }
+
+      .small-btn {
+        margin: .5rem;
+        letter-spacing: .1rem;
+        line-height: 1rem;
+        height: 2rem;
+        font-weight: 500;
+      }
+
+      #airport-img {
+        float: right;
+        margin-left: 15px;
+      }
+      #marriott-img {
+        float: left;
+        margin-right: 15px;
+      }
+
+      .sub-header {
+        padding-top: 2rem;
       }
 
       .center {
@@ -112,6 +141,8 @@
       }
       
       nav {
+        padding-bottom: 2rem;
+
         ul {
           @include vendor('display', 'flex');
           list-style: none;
@@ -149,13 +180,22 @@
 						height: 2.25rem;
 						background-size: 14px 14px;
 					}
-				}
+        }
 			}
 		}
 
 		@include breakpoint(xsmall) {
 			article {
-				@include padding(2rem, 1.5rem, (1rem, 0, 0.5rem, 0));
+        @include padding(2rem, 1.5rem, (1rem, 0, 0.5rem, 0));
+        #title {
+          font-size: 16px;
+        }
+        .sub-img {
+          display: none;
+          width: 100%;
+          float: none;
+          margin-left: 0px;
+        }
 			}
 		}
 	}
