--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -70,6 +70,15 @@
         padding-top: 0px !important;
       }
 
+      .small-btn-container {
+        width: 450px;
+        position: relative;
+
+        a {
+          border: none;
+        }
+      }
+
       .small-btn {
         margin: .5rem;
         letter-spacing: .1rem;
@@ -168,6 +177,20 @@
         }
       }
 		}
+
+    @include breakpoint(medium) {
+      article {      
+        .small-btn-container {
+          left: 50%;
+          width: 100%;
+          transform: translate(-50% , 0%);
+        }
+
+        .small-btn {
+          margin: .2rem;
+        }
+			}
+    }
 
 		@include breakpoint(small) {
 			article {
